examples/single-big-bang-package/manifests/twistlock.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: twistlock
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twistlock-ingress
  namespace: twistlock
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-ssl-redirect@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: twistlock-console
                port:
                  number: 8081
